--- a/data/weapons/RPK.yml
+++ b/data/weapons/RPK.yml
@@ -1,9 +1,9 @@
-name: RPK-74
+name: RPK
 type: Gun
-range: '750'
-rateOfFire: '650'
-calibre: '5.45'
-muzzleVel: '900'
+range: '500'
+rateOfFire: '600'
+calibre: '7.62'
+muzzleVel: '715'
 accuracy: 0.8
 barrels: 1
 crew: true
