--- a/data/equipment/GAZ-66.yml
+++ b/data/equipment/GAZ-66.yml
@@ -1,8 +1,7 @@
-name: RPK-74
-nation: USSR
+name: GAZ-66
+nation: NA
 type: Infantry
-weapons:
-  RPK-74: '120'
+weapons: {}
 roadSpeed: null
 horsepower: null
 groundPress: null
