--- a/data/equipment/Ural-375 POL.yml
+++ b/data/equipment/Ural-375 POL.yml
@@ -1,8 +1,7 @@
-name: RPK-74
+name: Ural-375 POL
 nation: USSR
 type: Infantry
-weapons:
-  RPK-74: '120'
+weapons: {}
 roadSpeed: null
 horsepower: null
 groundPress: null
