--- a/data/nirgendwola/formations/(BRN) 5 Fusilierdivision.yml
+++ b/data/nirgendwola/formations/(BRN) 5 Fusilierdivision.yml
@@ -1,11 +1,6 @@
-SIDC: SFGPUCA----I
+SIDC: SFGPUCI----I
 equipment:
-    FN FAL: 130
-    LRAC-89: 6
-    FN MAG: 12
-    VAB VTT: 8
     VLRA TPK: 500
-    M114F: 60
 hq: HdBRN
 location: [519, 362]
 name: (BRN) 5. Fusilierdivision
