--- a/data/germany83/formations/(US) 11th Armored Cavalry Regiment.yml
+++ b/data/germany83/formations/(US) 11th Armored Cavalry Regiment.yml
@@ -2,7 +2,7 @@ SIDC: SFGPUCRVA--G
 equipment:
   AH-64: 26
   AVLB: 6
-  Eng. Vehicle: 28
+  Engineering Truck: 28
   M1 Abrams: 129
   M106: 18
   M109A2: 24
